--- a/index.qmd
+++ b/index.qmd
@@ -21,6 +21,8 @@ Economist widely used **`STATA`** for the last 30 years to analyse economic data
 
 **`Python`** is a widely used general-purpose, high-level programming language. Its design philosophy emphasizes code readability, and its syntax allows programmers to express concepts in fewer lines of code than would be possible in languages such as `C++` or `Java`. The language provides constructs intended to enable clear programs on both a small and large scale.
 
+![https://xkcd.com/353/](Images/python.png){fig-align="center"}
+
 The core philosophy of the language is summarized by the document “PEP 20 (The Zen of Python)” as:
 
 -   Beautiful is better than ugly
@@ -256,7 +258,7 @@ fib(2)
 
 ### Example from economics
 
-Production functions are valuable tools for representing the economic activities of firms generating goods or the total output within an economy. Despite using the term "function" in a mathematical context, we will closely link the conceptualization of mathematical functions with the implementation of Python functions.
+Production functions are valuable tools for representing the economic activities of firms generating goods or the total output within an economy. Despite using the term "function" in a mathematical context, we will closely link the conceptualization of mathematical functions with the implementation of Python functions. 
 $$
 Y=F(K,L)
 $$
@@ -507,7 +509,7 @@ fig, ax = plt.subplots()
 ax.scatter(x, y, s=area, c=colors, alpha=0.5)
 
 ax.annotate(
-    "First point", xy=(x[0], y[0]), xycoords="data",
+    "Starting point", xy=(x[0], y[0]), xycoords="data",
     xytext=(25, -25), textcoords="offset points",
     arrowprops=dict(arrowstyle="->", connectionstyle="arc3,rad=0.6")
 )
@@ -602,7 +604,7 @@ b
 Here is non-exhaustive list of `Pandas` functions for data reading, writing, manipulation and statistical operations.
 
 | Method            | Returns                                                 |
-|----------------|-------------------------------------------------------|
+|------------------|------------------------------------------------------|
 | to_csv()          | Write the index and entries to a CSV file               |
 | read_csv()        | Read a csv and convert into a DataFrame                 |
 | to_json()         | Convert the object to a JSON string                     |
@@ -635,7 +637,7 @@ Here is non-exhaustive list of `Pandas` functions for data reading, writing, man
 
 : `Pandas` common functions
 
-**Example** 
+**Example**
 
 ```{python Pandasexample}
 titanic = pd.read_csv("https://raw.githubusercontent.com/jorisvandenbossche/course-python-data/main/notebooks/data/titanic.csv")
@@ -647,16 +649,16 @@ titanic.columns
 ```
 
 Use pandas, we can calculate:
-1. Age distrbution
-2. Survival rate by different sex groups as well as classes of titanic
-3. Records has the dataset (rows)
-4. Average fare by class
-5. Likelihood of young people to survive <=25
+
+1.  Age distrbution
+2.  Survival rate by different sex groups as well as classes of titanic
+3.  Records has the dataset (rows)
+4.  Average fare by class
+5.  Likelihood of young people to survive \<=25
 
 ```{python}
 titanic['Age'].hist()
 ```
-
 
 ```{python}
 titanic.groupby('Sex')['Survived'].mean()
@@ -677,4 +679,3 @@ titanic.groupby('Pclass')['Fare'].mean()
 ```{python}
 titanic[titanic['Age']<=25]['Survived'].mean() #Or you can make a new df and then calcualte the mean
 ```
-
